Adding JAY Software notes and link.

--- a/README
+++ b/README
@@ -13,3 +13,4 @@ in the 'tools' folder to investigate the meaning.
 Enjoy
 
 Standa Opichal <opichals@seznam.cz>
+JAY Software - http://jaysoft.atari.org
