--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-libhyp: ST-Guide HYPertext file handling library
+libhyp: ST-Guide HYPertext file parsing library
 Copyright (c) 2005-2008 Standa Opichal / JAY Software
 
 
